# cdk-goat

./: pyproject.toml
.github/workflows/: ci.yml
cdk/: pyproject.toml
