[tool.poetry]
name = "cdk"
version = "1.0.0"
description = "AWS CDK Stack CDK Goat"
authors = ["Avishay Bar  <avishay.il@gmail.com>"]
packages = [{include = "cdk_goat_service"}]

[tool.poetry.dependencies]
python = ">=3.8.1, <4.0"
aws-cdk-lib = "==2.162.1"
cdk-ecr-deployment = "*"
constructs = "==10.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"